Updated with eval

--- a/webapp/views/index.pug
+++ b/webapp/views/index.pug
@@ -10,8 +10,8 @@ block content
                 h3= "Welcome to AttentiSensor!"
                 hr
                 p This project is an adaptation of a Mind-Wandering model by Yue Zhao, Christoph Lofi, and Claudia Hauff.
-                p You can find the model here, and the webapp code here.
-                p There are two modes: prototype, evaluation. 'evaluation' requires users to indicate if they are paying attention at various intervals, while 'prototype' is the normal use case.
+                p The code can be found on Github.
+                p There are two modes: prototype, evaluation. 'evaluation' requires users to indicate if they are paying attention at various intervals, while 'prototype' is the typical use case.
                 p
                     button(id="btn-intro-accept" class="btn btn-primary" onclick="window.location.href='/instructions'") Continue
 
